[gd_scene load_steps=7 format=2]

[ext_resource path="res://portal/portal.gd" type="Script" id=1]
[ext_resource path="res://portal/portal.png" type="Texture" id=2]
[ext_resource path="res://sounds/portal-sound.wav" type="AudioStream" id=3]
[ext_resource path="res://ui/BaksoSapi.otf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 45.5, 64 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 4 )

[node name="Portal" type="Area2D"]
pause_mode = 2
z_index = -10
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.500004, -14 )
scale = Vector2( 0.45, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -14 )
shape = SubResource( 1 )

[node name="TextBG" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.513726 )
margin_left = -70.0
margin_top = -117.0
margin_right = 72.0
margin_bottom = -87.0
color = Color( 0, 0, 0, 1 )

[node name="Text" type="RichTextLabel" parent="."]
margin_left = -62.0
margin_top = -109.0
margin_right = 66.0
margin_bottom = -88.0
custom_fonts/normal_font = SubResource( 2 )
text = "'F' to go to next level"

[node name="FocusTimer" type="Timer" parent="."]
one_shot = true

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0
bus = "SFX"

[connection signal="body_entered" from="." to="." method="_on_Node2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Node2D_body_exited"]
[connection signal="timeout" from="FocusTimer" to="." method="_on_FocusTimer_timeout"]
